# products-web-crawler

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  null.d
src/: main.cpp
src/database/: database.h
src/model/: app_user.cpp  app_user.h  image.cpp  image.h  link.cpp  link.h  product.cpp  site.cpp  site.h  webpage.cpp  webpage.h
src/repository/: repository_link.cpp  site_repository.cpp  site_repository.h
src/service/: emitter_service.cpp  seeder_service.cpp  seeder_service.h  service.h
